Fix spacing in menu components

--- a/src/common/components/AvatarMenu/AvatarMenu.module.scss
+++ b/src/common/components/AvatarMenu/AvatarMenu.module.scss
@@ -51,6 +51,7 @@
     align-items: center;
     border-radius: 12px;
     margin: 0 4px;
+    line-height: normal;
 
     &:first-child {
       margin-top: 16px;
