--- a/src/common/components/NavMenu/NavMenu.module.scss
+++ b/src/common/components/NavMenu/NavMenu.module.scss
@@ -122,6 +122,7 @@
     border-radius: 12px;
     margin: 0 4px;
     box-shadow: none;
+    line-height: normal;
 
     &:first-child {
       margin-top: 16px;
